Try to fix bg image on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Lora', serif;
-    background: url('./assets/back-image.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
     font-size: 1.5rem;
     line-height: 1.5;
     font-weight: 400;
@@ -31,6 +26,21 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.App::before {
+    content: '';
+    position: fixed;
+    z-index: -1;
+    display: block;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    background-image: url('./assets/back-image.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
 }
 
 .navbar {
